--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -11,38 +11,40 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        [cite_start]uses: actions/checkout@v4 [cite: 1]
+        uses: actions/checkout@v4
 
       - name: 2. إعداد البيئة
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          [cite_start]distribution: 'temurin' [cite: 1]
+          distribution: 'temurin'
 
       - name: إعداد Node.js
         uses: actions/setup-node@v4
         with:
-          [cite_start]node-version: '22' [cite: 2]
+          node-version: '22'
 
       - name: 3. التنظيف وعزل الكود
         run: |
-          rm -rf android node_modules [cite: 3]
-          npm install --legacy-peer-deps [cite: 3]
-          mkdir -p dist_web [cite: 3]
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 3, 4]
-          npm run build --if-present [cite: 4]
+          rm -rf android node_modules
+          npm install --legacy-peer-deps
+          mkdir -p dist_web
+          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
+          npm run build --if-present
 
       - name: 4. إضافة منصة أندرويد
         run: |
-          npx cap config set webDir dist_web [cite: 5]
-          npx cap add android [cite: 5]
-          npx cap sync android [cite: 5]
+          npx cap config set webDir dist_web
+          npx cap add android
+          npx cap sync android
 
       - name: 5. ضبط أمن الشبكة ومعالجة الصور
         run: |
-          mkdir -p android/app/src/main/res/xml [cite: 6]
+          mkdir -p android/app/src/main/res/xml
           
-          echo '<?xml version="1.0" encoding="utf-8"?>
+          # إنشاء ملف أمن الشبكة
+          cat <<EOF > android/app/src/main/res/xml/network_security_config.xml
+          <?xml version="1.0" encoding="utf-8"?>
           <network-security-config>
               <domain-config cleartextTrafficPermitted="true">
                   <domain includeSubdomains="true">raqqa-v6cd.vercel.app</domain>
@@ -52,60 +54,67 @@ jobs:
                       <certificates src="system" /><certificates src="user" />
                   </trust-anchors>
               </base-config>
-          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml [cite: 6, 7]
+          </network-security-config>
+          EOF
 
-          echo '<?xml version="1.0" encoding="utf-8"?>
+          # إنشاء ملف مسارات الصور (حل مشكلة فشل المعالجة)
+          cat <<EOF > android/app/src/main/res/xml/file_paths.xml
+          <?xml version="1.0" encoding="utf-8"?>
           <paths>
               <external-path name="my_images" path="." />
               <cache-path name="my_cache" path="." />
               <external-files-path name="external_files" path="." />
               <files-path name="internal_files" path="." />
-          </paths>' > android/app/src/main/res/xml/file_paths.xml [cite: 8, 9, 10, 11]
+          </paths>
+          EOF
 
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          # إضافة الأذونات
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 12]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml [cite: 12]
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
 
-          [cite_start]sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml [cite: 12]
+          # تفعيل إعدادات الشبكة في المانيفست
+          sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
           
-          PROVIDER_TEXT='<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>'
-          [cite_start]sed -i "/<\/application>/i $PROVIDER_TEXT" android/app/src/main/AndroidManifest.xml [cite: 12]
+          # إضافة الـ Provider
+          echo '<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>' > provider.xml
+          sed -i "/<\/application>/e cat provider.xml" android/app/src/main/AndroidManifest.xml
 
       - name: 6. الأيقونات والوسائط
         run: |
-          npm install @capacitor/assets --save-dev [cite: 13]
-          npx capacitor-assets generate --android [cite: 13]
+          npm install @capacitor/assets --save-dev
+          npx capacitor-assets generate --android
 
       - name: 7. بناء الملفات
         run: |
-          cd android [cite: 14]
-          chmod +x gradlew [cite: 14]
-          ./gradlew clean [cite: 14]
-          ./gradlew assembleRelease [cite: 14]
-          ./gradlew bundleRelease [cite: 14]
+          cd android
+          chmod +x gradlew
+          ./gradlew clean
+          ./gradlew assembleRelease
+          ./gradlew bundleRelease
 
       - name: 8. التوقيع النهائي
         run: |
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 15]
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
           
-          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 15]
-          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 15]
+          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
+          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
 
-          [cite_start]/usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE" [cite: 16]
-          [cite_start]jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias [cite: 16]
-          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 16]
+          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE"
+          jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias
+          cp "$AAB_FILE" Roqa-Final-Signed.aab
 
       - name: 9. رفع النتائج
-        [cite_start]uses: actions/upload-artifact@v4 [cite: 17]
+        uses: actions/upload-artifact@v4
         with:
-          [cite_start]name: Roqa-Full-Package-v${{ github.run_number }} [cite: 17]
+          name: Roqa-Full-Package-v${{ github.run_number }}
           path: |
-            Roqa-Final-Signed.apk [cite: 17]
-            Roqa-Final-Signed.aab [cite: 17]
-            release_key.jks [cite: 17]
+            Roqa-Final-Signed.apk
+            Roqa-Final-Signed.aab
+            release_key.jks
