--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -1,120 +1,64 @@
-name: Roqa Final Professional Build Fixed
+name: Roqa Production Build Fixed
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 1. جلب الكود
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. إعداد البيئة
+      - name: Setup Node & Java
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: إعداد Node.js
-        uses: actions/setup-node@v4
+      
+      - uses: actions/setup-node@v4
         with:
           node-version: '22'
 
-      - name: 3. التنظيف وعزل الكود
+      - name: Install & Build Web
         run: |
-          rm -rf android node_modules
           npm install --legacy-peer-deps
-          mkdir -p dist_web
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
           npm run build --if-present
 
-      - name: 4. إضافة منصة أندرويد
+      - name: Capacitor Sync
         run: |
           npx cap config set webDir dist_web
-          npx cap add android
+          npx cap add android || true
           npx cap sync android
 
-      - name: 5. ضبط أمن الشبكة ومعالجة الصور
+      - name: Force Hardware Permissions
         run: |
-          mkdir -p android/app/src/main/res/xml
+          MANIFEST="android/app/src/main/AndroidManifest.xml"
+          # حقن تصاريح الميكروفون والكاميرا لضمان تجاوز مشكلة "يرجى منح الإذن"
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' $MANIFEST
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST
+          sed -i '/<application/i \    <uses-feature android:name="android.hardware.camera" android:required="false" />' $MANIFEST
           
-          # إنشاء ملف أمن الشبكة
-          cat <<EOF > android/app/src/main/res/xml/network_security_config.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <network-security-config>
-              <domain-config cleartextTrafficPermitted="true">
-                  <domain includeSubdomains="true">raqqa-v6cd.vercel.app</domain>
-              </domain-config>
-              <base-config cleartextTrafficPermitted="true">
-                  <trust-anchors>
-                      <certificates src="system" /><certificates src="user" />
-                  </trust-anchors>
-              </base-config>
-          </network-security-config>
-          EOF
+          # ضبط إعدادات أمن الشبكة وتفعيل الترافيك غير المشفر
+          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' $MANIFEST
 
-          # إنشاء ملف مسارات الصور (حل مشكلة فشل المعالجة)
-          cat <<EOF > android/app/src/main/res/xml/file_paths.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <paths>
-              <external-path name="my_images" path="." />
-              <cache-path name="my_cache" path="." />
-              <external-files-path name="external_files" path="." />
-              <files-path name="internal_files" path="." />
-          </paths>
-          EOF
-
-          # إضافة الأذونات
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
-
-          # تفعيل إعدادات الشبكة في المانيفست
-          sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
+      - name: Build & Sign APK
+        run: |
+          cd android && chmod +x gradlew && ./gradlew assembleRelease
+          cd ..
+          # إنشاء مفتاح توقيع مؤقت للعملية
+          keytool -genkey -v -keystore release.jks -alias roqa -keyalg RSA -keysize 2048 -validity 10000 \
+            -storepass "roqa123456" -keypass "roqa123456" -dname "CN=Roqa"
           
-          # إضافة الـ Provider
-          echo '<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>' > provider.xml
-          sed -i "/<\/application>/e cat provider.xml" android/app/src/main/AndroidManifest.xml
+          APK_RAW=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
+          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release.jks \
+            --ks-pass pass:"roqa123456" --out Roqa-Final-Signed.apk "$APK_RAW"
 
-      - name: 6. الأيقونات والوسائط
-        run: |
-          npm install @capacitor/assets --save-dev
-          npx capacitor-assets generate --android
-
-      - name: 7. بناء الملفات
-        run: |
-          cd android
-          chmod +x gradlew
-          ./gradlew clean
-          ./gradlew assembleRelease
-          ./gradlew bundleRelease
-
-      - name: 8. التوقيع النهائي
-        run: |
-          keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
-            -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
-          
-          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
-
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE"
-          jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias
-          cp "$AAB_FILE" Roqa-Final-Signed.aab
-
-      - name: 9. رفع النتائج
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Roqa-Full-Package-v${{ github.run_number }}
-          path: |
-            Roqa-Final-Signed.apk
-            Roqa-Final-Signed.aab
-            release_key.jks
+          name: Roqa-Production-App
+          path: Roqa-Final-Signed.apk
